--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,3 +1,19 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav ">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/addform">Inventory List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Orders</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sales</a>
+      </li>
+    </ul>
+    <button type="button" class="btn btn-dark" routerLink="">Login</button>
+  </div>
+</nav>
