--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,9 +6,12 @@
 					<span class="login100-form-title p-b-34">
 						Account Login
 					</span>
+          <span>
+            {{user.content}}
+          </span>
 
         <div class="wrap-input100 rs1-wrap-input100 validate-input m-b-20" data-validate="Type user name">
-          <input id="first-name" class="input100" type="text" name="username" placeholder="User name">
+          <input id="first-name" class="input100" [(ngModel)]="content" type="text" name="username" placeholder="User name">
           <span class="focus-input100"></span>
         </div>
         <div class="wrap-input100 rs2-wrap-input100 validate-input m-b-20" data-validate="Type password">
@@ -19,6 +22,9 @@
         <div class="container-login100-form-btn">
           <button class="login100-form-btn" routerLink="/inventorylist">
             Sign in
+          </button>
+          <button class="login100-form-btn" (click)="getUser()">
+            Get greeting
           </button>
         </div>
 
