Corected routing paths

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,9 +23,9 @@
           <button class="login100-form-btn" routerLink="/inventorylist">
             Sign in
           </button>
-          <button class="login100-form-btn" (click)="getUser()">
-            Get greeting
-          </button>
+          <!--<button class="login100-form-btn" (click)="getUser()">-->
+            <!--Get greeting-->
+          <!--</button>-->
         </div>
 
         <div class="w-full text-center  p-b-250">
