--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -208,7 +208,7 @@ iframe {
   position: absolute;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
   top: 0;
   left: 0;
 }
@@ -2783,14 +2783,14 @@ input.input100 {
 */
 .sizefull {
   width: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 .w-full {width: 100%;}
-.h-full {height: 100%;}
+/*.h-full {height: 100%;}*/
 .max-w-full {max-width: 100%;}
 .max-h-full {max-height: 100%;}
 .min-w-full {min-width: 100%;}
-.min-h-full {min-height: 100%;}
+/*.min-h-full {min-height: 100%;}*/
 
 /*[ Top Bottom Left Right ]
 -----------------------------------------------------------
