--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
           <!--</button>-->
         </div>
 
-        <div class="w-full text-center  p-b-250">
+        <div class="w-full text-center  m-b-200">
 						<span class="txt1">
 							Forgot
 						</span>
