--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button  class="navbar-toggler" type="button" data-toggle="collapse"
-           data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-           aria-expanded="false" aria-label="Toggle navigation"
-           (click)="toggleCollapsed()">
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation"
+          (click)="toggleCollapsed()">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarText">
+  <div class="collapse navbar-collapse" id="navbarText"  [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
     <ul class="navbar-nav ">
       <li class="nav-item">
         <a class="nav-link" routerLink="/inventorylist">Inventory List</a>
@@ -16,7 +16,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Sales</a>
       </li>
+      <li class="nav-item">
+      <button type="button" class="btn btn-dark" routerLink="">Login</button>
+      </li>
     </ul>
-    <button type="button" class="btn btn-dark" routerLink="">Login</button>
   </div>
 </nav>
