--- a/src/app/ui/table/table.component.html
+++ b/src/app/ui/table/table.component.html
@@ -4,7 +4,7 @@
   <a class="navbar-brand">Products</a>
   <form class="form-inline">
     <input type="text" id="myInput" class="search form-control mr-sm-2" onkeyup="myFunction()" placeholder="Search for Products">
-    <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/addform">Add Product</button>
+    <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/api/products">Add Product</button>
   </form>
 
 </nav>
