Added: order pages

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -11,10 +11,10 @@
         <a class="nav-link" routerLink="/inventorylist">Inventory List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Orders</a>
+        <a class="nav-link" routerLink="orderList">Orders</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sales</a>
+        <a class="nav-link" routerLink="saleList">Sales</a>
       </li>
       <li class="nav-item">
       <button type="button" class="btn btn-dark" routerLink="">Login</button>
