Added: sales pages

--- a/src/app/ui/order-form/order-form.component.html
+++ b/src/app/ui/order-form/order-form.component.html
@@ -9,54 +9,22 @@
   <div class="card-body">
     <h5 class="card-title"> </h5>
     <form>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputName">First name</label>
-          <input type="text" class="form-control" id="inputName" placeholder="First name">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="inputSurname">Last name</label>
-          <input type="text" class="form-control" id="inputSurname" placeholder="Last name">
-        </div>
+
+      <div class="form-group ">
+        <label for="inputState">Supplier</label>
+        <select id="inputState" class="form-control">
+          <option selected>Supplier 1</option>
+          <option selected>Supplier 2</option>
+          <option selected>Supplier 3</option>
+          <option selected>Supplier 4</option>
+        </select>
       </div>
 
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-        </div>
-        <div class="form-group col-md-6">
-          <label for="inputTelephone">Telephone</label>
-          <input type="text" class="form-control" id="inputTelephone" placeholder="Phone number">
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
       <div class="form-group">
         <label for="inputAddress2">Issue date</label>
         <input type="date" class="form-control" id="inputAddress2" placeholder="Issue date">
       </div>
 
-
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Country</label>
-          <select id="inputState" class="form-control">
-            <option selected>Bosnia and Herzegovina</option>
-          </select>
-        </div>
-        <div class="form-group col-md-2">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
-        </div>
-      </div>
 
       <button type="submit" class="btn btn-primary">Save order</button>
     </form>
