--- a/src/app/ui/order/order.component.html
+++ b/src/app/ui/order/order.component.html
@@ -73,7 +73,9 @@
     </tr>
     </tbody>
   </table>
-  <button type="button" class="btn btn-dark" routerLink="/orderDetails">vidi order-details</button>
-
+  <button type="button" class="btn btn-dark" routerLink="/orderDetails">View order-details</button>
+  <nav class="navbar navbar-white bg-white">
+    <a class="navbar-brand"> </a>
+  </nav>
 
 </div>
