--- a/src/app/ui/sales/sales.component.html
+++ b/src/app/ui/sales/sales.component.html
@@ -13,9 +13,8 @@
     <tr>
 
       <th scope="col">Sale#</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
       <th scope="col">Paid</th>
+      <th scope="col">Total Units</th>
       <th scope="col">Total</th>
       <th scope="col">Created</th>
 
@@ -24,42 +23,49 @@
     <tbody>
     <tr>
       <td>S00001</td>
-      <td>Ajla </td>
-      <td>Hajdarevic</td>
+
       <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <p *ngIf="true" class="btn btn-success btn-sm">Paid</p>
       </td>
+      <td>30</td>
+
       <td>KM440.00</td>
+
       <td>Dec 12 2018</td>
     </tr>
     <tr>
       <td>S00002</td>
-      <td>Azemina </td>
-      <td>Celebic</td>
+
       <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck2">
+        <p *ngIf="true" class="btn btn-success btn-sm">Paid</p>
       </td>
+      <td>30</td>
+
       <td>KM150.00</td>
       <td>Dec 12 2018</td>
 
     </tr>
     <tr>
       <td>S00003</td>
-      <td>Hana</td>
-      <td>Gicevic</td>
+
       <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck3">
+        <p *ngIf="true" class="btn btn-success btn-sm">Paid</p>
       </td>
+      <td>30</td>
+
       <td>KM623.00</td>
       <td>Dec 12 2018</td>
     </tr>
     <tr>
       <td>S00004</td>
-      <td>Meho</td>
-      <td>Mehic</td>
+
+
       <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck4">
+        <p *ngIf="true" class="btn btn-success btn-sm">Paid</p>
+
       </td>
+      <td>30</td>
+
       <td>KM167.00</td>
       <td>Dec 12 2018</td>
     </tr>
