--- a/src/app/ui/order-details/order-details.component.html
+++ b/src/app/ui/order-details/order-details.component.html
@@ -10,9 +10,14 @@
     <h5 class="card-title">Orders #0001</h5>
     <form>
       <fieldset disabled>
-        <div class="form-group">
-          <label for="disabledTextInput1">Issue to: </label>
-          <input type="text" id="disabledTextInput1" class="form-control" placeholder="Hana Gicevic">
+        <div class="form-group ">
+          <label for="inputState">Issue to</label>
+          <select id="inputState" class="form-control">
+            <option selected>Supplier 1</option>
+            <option selected>Supplier 2</option>
+            <option selected>Supplier 3</option>
+            <option selected>Supplier 4</option>
+          </select>
         </div>
         <div class="form-group">
           <label for="disabledTextInput2">Issue date: </label>
@@ -32,9 +37,7 @@
         <tr>
 
           <th scope="col">Product Name</th>
-          <th scope="col">Supplier</th>
           <th scope="col">Quantity</th>
-          <th scope="col">Available</th>
           <th scope="col">Price(KM)</th>
           <th scope="col">Total(KM)</th>
         </tr>
@@ -42,33 +45,25 @@
         <tbody>
         <tr>
           <td>Cotton T-shirt</td>
-          <td>Acme Supplies</td>
           <td>1</td>
-          <td>20</td>
           <td>55.00</td>
           <td>55.00</td>
         </tr>
         <tr>
           <td>Cocktail Dress</td>
-          <td>Acme Supplies</td>
           <td>3</td>
-          <td>18</td>
           <td>70.00</td>
           <td>210</td>
         </tr>
         <tr>
           <td>Silver Watch</td>
-          <td>Swarovski</td>
           <td>2</td>
-          <td>10</td>
           <td>490.00</td>
           <td>980.00</td>
         </tr>
         <tr>
           <td>Diamond Ring</td>
-          <td>Swarovski</td>
           <td>5</td>
-          <td>12</td>
           <td>750.00</td>
           <td>3.750</td>
         </tr>
