--- a/src/app/ui/form/form.component.html
+++ b/src/app/ui/form/form.component.html
@@ -36,7 +36,7 @@
 
       <div class="wrap-input100 validate-input" data-validate = "Supplier is required">
         <span class="label-input100">Supplier:</span>
-        <input class="input100" type="text" required [(ngModel)]="product.supplier" name="supplier" placeholder="Enter supplier">
+        <input class="input100" type="text" required [(ngModel)]="product.supplier_id" name="supplier" placeholder="Enter supplier">
         <span class="focus-input100"></span>
       </div>
 
@@ -46,6 +46,7 @@
         <input class="input100" type="text" required [(ngModel)]="product.prodType" name="type" placeholder="Enter product type">
         <span class="focus-input100"></span>
       </div>
+
 
       <div class="container-contact100-form-btn">
         <button type="submit" class="contact100-form-btn" (click)="onSubmit()">
