--- a/src/app/ui/sales-form/sales-form.component.html
+++ b/src/app/ui/sales-form/sales-form.component.html
@@ -9,8 +9,15 @@
   <div class="card-body">
     <h5 class="card-title"> </h5>
     <form>
-     
-
+      <label for="inputAddress2">Select product</label>
+      <select>
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="audi">Audi</option>
+      </select>
+      <label for="inputAddress2">Select quantity not greater than available quantity</label>
+      <input type="number" name="quantity">
       <div class="form-group">
         <label for="inputAddress2">Issue date</label>
         <input type="date" class="form-control" id="inputAddress2" placeholder="Issue date">
