--- a/src/app/ui/order-form/order-form.component.html
+++ b/src/app/ui/order-form/order-form.component.html
@@ -24,6 +24,7 @@
         <label for="inputAddress2">Issue date</label>
         <input type="date" class="form-control" id="inputAddress2" placeholder="Issue date">
       </div>
+      <app-product-select></app-product-select>
 
 
       <button type="submit" class="btn btn-primary">Save order</button>
