--- a/src/app/ui/table/table.component.html
+++ b/src/app/ui/table/table.component.html
@@ -27,7 +27,8 @@
       <!--<td>{{product.supplier_id}}</td>-->
       <td>
         <div *ngFor="let supplier of suppliers">
-        <div *ngIf="supplier.id == product.supplier_id"> {{supplier.supplierName}}</div>
+          <div *ngIf="supplier.id == product.supplier_id">blah</div>
+        {{supplier.supplierName}}
         </div>
       </td>
       <td>{{product.prodType}}</td>
