--- a/src/app/ui/form/form.component.html
+++ b/src/app/ui/form/form.component.html
@@ -36,7 +36,7 @@
 
       <div class="wrap-input100 validate-input" data-validate = "Supplier is required">
         <span class="label-input100">Supplier:</span>
-        <input class="input100" type="text" required [(ngModel)]="product.supplier_id" name="supplier" placeholder="Enter supplier">
+        <input class="input100" type="number" required [(ngModel)]="product.supplierId" name="supplier" placeholder="Enter supplier">
         <span class="focus-input100"></span>
       </div>
 
@@ -87,11 +87,11 @@
 <!--&lt;!&ndash; Global site tag (gtag.js) - Google Analytics &ndash;&gt;-->
 <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>-->
 <!--<script>-->
-  <!--window.dataLayer = window.dataLayer || [];-->
-  <!--function gtag(){dataLayer.push(arguments);}-->
-  <!--gtag('js', new Date());-->
+<!--window.dataLayer = window.dataLayer || [];-->
+<!--function gtag(){dataLayer.push(arguments);}-->
+<!--gtag('js', new Date());-->
 
-  <!--gtag('config', 'UA-23581568-13');-->
+<!--gtag('config', 'UA-23581568-13');-->
 <!--</script>-->
 
 
