--- a/src/app/ui/sale-details/sale-details.component.html
+++ b/src/app/ui/sale-details/sale-details.component.html
@@ -67,6 +67,20 @@
       </table>
     </div>
 
+    <table>
+      <tr>
+        <td><input type="text" name="item_name" placeholder="item name" /></td>
+        <td><select name="item_type"><option value="" selected="selected">Type</option></select></td>
+      </tr>
+      <tr>
+        <td><input type="text" name="item_name" placeholder="item name" /></td>
+        <td><select name="item_type"><option value="" selected="selected">Type</option></select></td>
+      </tr>
+      <tr>
+        <td colspan="2" id="add">+ Add new item</td>
+      </tr>
+    </table>
+
     <nav class="navbar navbar-white bg-white">
       <a class="navbar-brand"> </a>
     </nav>
