Order and Sales pages- added backend

--- a/src/app/ui/order/order.component.html
+++ b/src/app/ui/order/order.component.html
@@ -13,63 +13,16 @@
     <tr>
 
       <th scope="col">Order#</th>
-      <th scope="col">Status</th>
-      <th scope="col">Supplier</th>
-      <th scope="col">Paid</th>
-      <th scope="col">Total</th>
-      <th scope="col">Created</th>
+      <th scope="col">Total Cost</th>
+      <th scope="col">Date Created</th>
 
     </tr>
     </thead>
     <tbody>
-    <tr>
-      <td>S00001</td>
-      <td>
-        <span class="badge badge-success">Active</span>
-      </td>
-      <td>Acme Supplies</td>
-      <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      </td>
-      <td>KM440.00</td>
-      <td>Dec 12 2018</td>
-    </tr>
-    <tr>
-      <td>S00002</td>
-      <td>
-        <span class="badge badge-success">Active</span>
-      </td>
-      <td>Acme Supplies</td>
-      <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck2">
-      </td>
-      <td>KM150.00</td>
-      <td>Dec 12 2018</td>
-
-    </tr>
-    <tr>
-      <td>S00003</td>
-      <td>
-        <span class="badge badge-primary">Finalized</span>
-      </td>
-      <td>Swarovski</td>
-      <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck3">
-      </td>
-      <td>KM623.00</td>
-      <td>Dec 12 2018</td>
-    </tr>
-    <tr>
-      <td>S00004</td>
-      <td>
-        <span class="badge badge-success">Active</span>
-      </td>
-      <td>Swarovski</td>
-      <td>
-        <input type="checkbox" class="form-check-input" id="exampleCheck4">
-      </td>
-      <td>KM167.00</td>
-      <td>Dec 12 2018</td>
+    <tr *ngFor="let order of orders">
+      <td>{{order.id}}</td>
+      <td>{{order.totalCost}} BAM</td>
+      <td>{{order.orderDate}}</td>
     </tr>
     </tbody>
   </table>
