--- a/src/app/ui/sales-form/sales-form.component.html
+++ b/src/app/ui/sales-form/sales-form.component.html
@@ -7,7 +7,6 @@
       </li>
     </ul>
   </div>
-
 <div class="container p-3">
   <div class="row">
     <div class="col-12">
@@ -35,14 +34,13 @@
                 <div [formGroupName]="i" class="row">
                   <div class="form-group col-6">
                     <label>Product Name</label>
-                    <select (change)="changedFieldType(i)" class="form-control" formControlName="type" type="text">
-                      <option value="email">Email</option>
-                      <option value="phone">Phone</option>
+                    <select   [(ngModel)]="selectedLevel" class="form-control" formControlName="type" type="text">
+                      <option value="product" *ngFor="let product of products" [ngValue]="product">{{product.prodName}}</option>
                     </select>
                   </div>
                   <div class="form-group col-6">
                     <label>Contact Label</label>
-                    <input class="form-control" formControlName="name" type="text">
+                    <label class="form-control" formControlName="name" type="number">3</label>
                     <span class="text-danger" *ngIf="getContactsFormGroup(i).controls['name'].touched && getContactsFormGroup(i).controls['name'].hasError('required')">
                       Label is required! </span>
                   </div>
@@ -50,12 +48,6 @@
                   <div class="form-group col-12">
                     <label>Email/Phone No.</label>
                     <input class="form-control" formControlName="value" type="text">
-                    <span class="text-danger" *ngIf="getContactsFormGroup(i).controls['value'].touched && getContactsFormGroup(i).controls['value'].hasError('required')">
-                      Email/Phone no is required! </span>
-                    <span class="text-danger" *ngIf="getContactsFormGroup(i).controls['value'].touched && getContactsFormGroup(i).controls['value'].hasError('email')">
-                      Email is not valid! </span>
-                    <span class="text-danger" *ngIf="getContactsFormGroup(i).controls['value'].touched && getContactsFormGroup(i).controls['value'].hasError('pattern')">
-                      Phone no. is not valid! </span>
                   </div>
                   <div class="form-group col-12 text-right">
                     <button class="btn btn-danger" type="button" (click)="removeContact(i)"> Remove </button>
@@ -66,8 +58,7 @@
           </div>
           <div class="card-body">
             <div class="col-12">
-              <button class="btn btn-primary m-1" type="button" (click)="addContact()"> Add Position </button>
-              <button class="btn btn-primary m-1" type="button" (click)="addContact()"> Add Contact </button>
+              <button class="btn btn-primary m-1" type="button" (click)="addContact()"> Add Product</button>
               <button class="btn btn-success m-1" [disabled]="!form.valid" type="submit"> Save User Profile </button>
             </div>
           </div>
