Edited: sales details

--- a/src/app/ui/form/form.component.html
+++ b/src/app/ui/form/form.component.html
@@ -35,8 +35,9 @@
 
 
       <div class="wrap-input100 validate-input" data-validate = "Supplier is required">
-        <span class="label-input100">Supplier:</span>
-        <input class="input100" type="number" required [(ngModel)]="product.supplierId" name="supplier" placeholder="Enter supplier">
+        <span class="label-input100">Supplier:
+        </span>
+        <input class="input100" type="number" required [(ngModel)]="product.supplierId" name="supplier" placeholder="Choose between 11-Garnier, 12-Schwarzkopf, 13-Sensodyne, 14-Nivea">
         <span class="focus-input100"></span>
       </div>
 
