--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -8,17 +8,37 @@
   <div class="collapse navbar-collapse" id="navbarText"  [ngClass]="{'collapse': collapsed, 'navbar-collapse': true}">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/inventorylist">Inventory List</a>
+        <a *ngIf="authority === 'user'"  class="nav-link"  routerLink="user">Inventory List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="orderList">Orders</a>
+        <a *ngIf="authority === 'user'"  class="nav-link" routerLink="user">Orders</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="saleList">Sales</a>
+        <a *ngIf="authority === 'user'"  class="nav-link" routerLink="user">Sales</a>
       </li>
       <li class="nav-item">
-      <button type="button" class="btn btn-dark" routerLink="">Login</button>
+      <a *ngIf="!authority" class="nav-link" routerLink="auth/login">Login</a>
       </li>
     </ul>
   </div>
 </nav>
+
+<!--<nav class="navbar navbar-inverse">-->
+  <!--<div class="container-fluid">-->
+    <!--<ul class="nav navbar-nav" routerLinkActive="active">-->
+      <!--<li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>-->
+      <!--<li *ngIf="authority === 'admin'" class="nav-item">-->
+        <!--<a class="nav-link" routerLink="user">User Board</a>-->
+      <!--</li>-->
+      <!--<li *ngIf="authority === 'admin'" class="nav-item">-->
+        <!--<a class="nav-link" routerLink="admin">Admin Board</a>-->
+      <!--</li>-->
+      <!--<li *ngIf="authority === 'admin'" class="nav-item">-->
+        <!--<a class="nav-link" routerLink="pm">PM Board</a>-->
+      <!--</li>-->
+      <!--<li  class="nav-item">-->
+        <!--<a class="nav-link" routerLink="auth/login">Login</a>-->
+      <!--</li>-->
+    <!--</ul>-->
+  <!--</div>-->
+<!--</nav>-->
